fix, add rating 50 users
