# Models/RatingModels.cs
@@ -8,7 +8,14 @@ namespace Models
 {
     public class GetRatingPositionModel
     {
+        public List<RatingModel> Rating { get; set; }
         public long LowestPosition { get; set; }
         public long HighestPosition { get; set; }
+    }
+
+    public class RatingModel
+    {
+        public string UserName { get; set; }
+        public int StarsCount { get; set; }
     }
 }
